--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "swr": "0.5.6"
   },
   "devDependencies": {
+    "@types/node": "^16.11.4",
+    "@types/react": "^17.0.32",
+    "@types/request": "^2.48.7",
+    "@types/stream-to-promise": "^2.2.1",
     "autoprefixer": "10.3.1",
     "postcss": "8.3.6",
     "prettier": "2.3.2",
     "stream-to-promise": "3.0.0",
-    "tailwindcss": "2.2.7"
+    "tailwindcss": "2.2.7",
+    "typescript": "^4.4.4"
   }
 }
